# todo-list-app

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  test.sh
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/tests/: conftest.py  database.py
backend/tests/routers/: test_todo.py
backend/tests/utils/: __init__.py  todo_crud.py
backend/todo/: config.py  crud.py  database.py  main.py  routers.py  schemas.py
backend/todo/scripts/: init_db.py
backend/todo/todo/: api.py  crud.py  models.py
